--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "parcel project-root/index.html --port 3000",
-    "build": "parcel build project-root/index.html --dist-dir public --public-url ./"
+    "build": "parcel build project-root/index.html --dist-dir public --public-url ./ && if [ \"$COMING_SOON\" = \"1\" ]; then cp project-root/coming-soon.html public/index.html; fi",
+    "build:coming-soon": "COMING_SOON=1 npm run build",
+    "preview": "npm run build && python3 -m http.server --directory public 8000"
   },
   "devDependencies": {
     "parcel": "^2.9.3"
