Ensure main builds coming soon variant

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "parcel project-root/index.html --port 3000",
-    "build": "parcel build project-root/index.html --dist-dir public --public-url ./ && cp project-root/coming-soon.html public/index.html && cp project-root/images/coming-soon-bg.jpg public/coming-soon-bg.jpg",
+    "build": "if [ \"$CF_PAGES_BRANCH\" = \"main\" ] || [ \"$COMING_SOON\" = \"1\" ]; then echo 'Building coming soon variant'; parcel build project-root/index.html --dist-dir public --public-url ./ && cp project-root/coming-soon.html public/index.html && cp project-root/images/coming-soon-bg.jpg public/coming-soon-bg.jpg; else echo 'Building full site variant'; parcel build project-root/index.html --dist-dir public --public-url ./; fi",
     "build:full-site": "parcel build project-root/index.html --dist-dir public --public-url ./",
-    "build:coming-soon": "npm run build",
-    "enable-coming-soon": "sh -c 'touch .coming_soon && git add .coming_soon && git commit -m \"Enable Coming Soon\" && git push origin main'",
-    "disable-coming-soon": "sh -c 'git rm -f .coming_soon && git commit -m \"Disable Coming Soon\" && git push origin main'",
+    "build:coming-soon": "COMING_SOON=1 npm run build",
+    "enable-coming-soon": "echo 'Coming soon is controlled by CF_PAGES_BRANCH or COMING_SOON=1 env var.'",
+    "disable-coming-soon": "echo 'Use develop branch (or unset COMING_SOON) for full site builds.'",
     "preview": "npm run build && python3 -m http.server --directory public 8000"
   },
   "devDependencies": {
