Simplify build: main always outputs coming soon page

--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "parcel project-root/index.html --port 3000",
-    "build": "BR=${CF_PAGES_BRANCH:-$(git rev-parse --abbrev-ref HEAD 2>/dev/null || echo unknown)}; if [ \"$BR\" = \"main\" ] || [ \"$COMING_SOON\" = \"1\" ]; then echo \"Building coming soon variant (branch=$BR)\"; parcel build project-root/index.html --dist-dir public --public-url ./ && cp project-root/coming-soon.html public/index.html && cp project-root/images/coming-soon-bg.jpg public/coming-soon-bg.jpg; else echo \"Building full site variant (branch=$BR)\"; parcel build project-root/index.html --dist-dir public --public-url ./; fi",
+    "build": "parcel build project-root/index.html --dist-dir public --public-url ./ && cp project-root/coming-soon.html public/index.html && cp project-root/images/coming-soon-bg.jpg public/coming-soon-bg.jpg",
     "build:full-site": "parcel build project-root/index.html --dist-dir public --public-url ./",
-    "build:coming-soon": "COMING_SOON=1 npm run build",
-    "enable-coming-soon": "echo 'Coming soon is controlled by CF_PAGES_BRANCH or COMING_SOON=1 env var.'",
-    "disable-coming-soon": "echo 'Use develop branch (or unset COMING_SOON) for full site builds.'",
     "preview": "npm run build && python3 -m http.server --directory public 8000"
   },
   "devDependencies": {
