Use build.sh script for reliable coming soon deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "parcel project-root/index.html --port 3000",
-    "build": "parcel build project-root/index.html --dist-dir public --public-url ./ && cp project-root/coming-soon.html public/index.html && cp project-root/images/coming-soon-bg.jpg public/coming-soon-bg.jpg",
+    "build": "bash build.sh",
     "build:full-site": "parcel build project-root/index.html --dist-dir public --public-url ./",
     "preview": "npm run build && python3 -m http.server --directory public 8000"
   },
